# AkuWallet

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  justfile  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
app/: globals.css  layout.tsx
app/dashboard/: layout.tsx  page.tsx
backend/: .env.example  database.py  dependencies.py  local.db  local.db-shm  local.db-wal  main.py  models.py  pyproject.toml  security.py
backend/routers/: accounts.py  ai.py  auth.py  automation_rules.py  categories.py  goals.py  imports.py  investments.py  networth.py  settings.py  smart_import.py  stats.py  tags.py  transactions.py
backend/services/: exchange_rates.py  market_prices.py
components/: dashboard-nav.tsx  dashboard-overview.tsx  manage-categories-dialog.tsx  manage-tags-dialog.tsx  transactions-list.tsx
docs/: external-data-sources.md
frontend/: package.json
frontend/app/: actions.ts  layout.tsx  page.tsx
frontend/components/: add-goal-dialog.tsx  add-investment-dialog.tsx  add-transaction-dialog.tsx  dashboard-nav.tsx  dashboard-overview.tsx  edit-goal-dialog.tsx  edit-investment-dialog.tsx  edit-transaction-dialog.tsx  global-filter-bar.tsx  goals-list.tsx  goals-preview.tsx  goals-widget.tsx  import-transactions.tsx  manage-categories-dialog.tsx  manage-tags-dialog.tsx  net-worth-card.tsx  quick-add-transaction.tsx  recent-transactions.tsx  sell-investment-dialog.tsx  settings-form.tsx  smart-import.tsx  (+3 more)
lib/: api.ts
scripts/: 001_create_wallet_tables.sql
(+23 files in other folders)
